[gd_scene load_steps=40 format=4 uid="uid://ppbs2v1qqmfh"]

[ext_resource type="Script" uid="uid://bis3fpe6ijoir" path="res://scenes/screens/intro_cutscene.gd" id="1_yi7uw"]
[ext_resource type="Texture2D" uid="uid://38gpawy024ac" path="res://assets/images/buttons/skip_btn.png" id="2_l8g6v"]
[ext_resource type="Texture2D" uid="uid://vo32gu3u4roh" path="res://assets/images/outside_sky.png" id="2_vm38n"]
[ext_resource type="FontFile" uid="uid://dm4qb644wjjgu" path="res://assets/quicksand.ttf" id="2_yi7uw"]
[ext_resource type="Texture2D" uid="uid://ce6w8o0b7c66k" path="res://assets/images/buttons/skip_btn_pressed.png" id="3_mcn63"]
[ext_resource type="Texture2D" uid="uid://b4qnleyowidsy" path="res://assets/images/area/bedroom_01.png" id="3_y3sv7"]
[ext_resource type="Texture2D" uid="uid://cfkoed3db0d10" path="res://assets/images/area/bathroom_01.png" id="4_l8g6v"]
[ext_resource type="Texture2D" uid="uid://xshsawfgrgay" path="res://assets/images/world_tile.png" id="5_mcn63"]
[ext_resource type="Texture2D" uid="uid://b1bdxyppq8l2w" path="res://assets/images/bed_player_01.png" id="7_kav3k"]
[ext_resource type="Texture2D" uid="uid://dpety3spwtxja" path="res://assets/images/bed_player_02.png" id="8_5mj84"]
[ext_resource type="Texture2D" uid="uid://dnlxibwckb86m" path="res://assets/images/monster_cabinet_01.png" id="9_sqxsj"]
[ext_resource type="Texture2D" uid="uid://bpcosspumpibi" path="res://assets/images/door_closed_unlock.png" id="10_8amvx"]
[ext_resource type="Texture2D" uid="uid://ba56ru8oayv73" path="res://assets/images/door_closed_lock.png" id="11_vauom"]
[ext_resource type="Texture2D" uid="uid://b1euqvxrdvo8l" path="res://assets/images/toy_box_01.png" id="12_b130e"]
[ext_resource type="Texture2D" uid="uid://b3nv7qhprr7u8" path="res://assets/images/toy_box_02.png" id="13_2mp2x"]
[ext_resource type="Texture2D" uid="uid://dpx5j0aivq5ex" path="res://assets/images/toy_box_03.png" id="14_hybms"]
[ext_resource type="Texture2D" uid="uid://cbv1t6qeax35k" path="res://assets/images/pic_01.png" id="15_tyrvf"]
[ext_resource type="Texture2D" uid="uid://bv5snm2t0tubx" path="res://assets/images/pic_02.png" id="16_7y78n"]
[ext_resource type="Texture2D" uid="uid://cuiahy1sov4p4" path="res://assets/images/light_tri.png" id="17_0xgk8"]
[ext_resource type="Texture2D" uid="uid://dkgk1hgm6uvt2" path="res://assets/images/clouds.png" id="18_0xs05"]
[ext_resource type="Texture2D" uid="uid://uc2n2bxtc8wb" path="res://assets/images/light.png" id="18_vm38n"]
[ext_resource type="Texture2D" uid="uid://cc1vq5f5iouky" path="res://assets/images/elesi.png" id="19_27cpo"]
[ext_resource type="AudioStream" uid="uid://134sbuuqyvdu" path="res://assets/sfxs/night-ambience-17064 (1).mp3" id="20_cr8av"]
[ext_resource type="AudioStream" uid="uid://dvx3m00jf0nl" path="res://assets/sfxs/electric-fan-60751.mp3" id="21_6802q"]
[ext_resource type="AudioStream" uid="uid://cu3hk32j4gvpu" path="res://assets/sfxs/rattle-85837.mp3" id="22_lm22b"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cdkw2"]
texture = ExtResource("2_vm38n")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:1/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xv5gm"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_cdkw2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1qxex"]
texture = ExtResource("3_y3sv7")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sgxps"]
texture = ExtResource("4_l8g6v")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0

[sub_resource type="TileSet" id="TileSet_nbnyv"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_sgxps")
sources/0 = SubResource("TileSetAtlasSource_1qxex")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gu5dh"]
texture = ExtResource("5_mcn63")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_4meus"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_gu5dh")

[sub_resource type="TileSet" id="TileSet_48t7m"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1

[sub_resource type="SpriteFrames" id="SpriteFrames_hcyg2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_kav3k")
}, {
"duration": 1.0,
"texture": ExtResource("8_5mj84")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5rod7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_sqxsj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_pckea"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_8amvx")
}, {
"duration": 1.0,
"texture": ExtResource("11_vauom")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_sy5bn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_b130e")
}, {
"duration": 1.0,
"texture": ExtResource("13_2mp2x")
}, {
"duration": 1.0,
"texture": ExtResource("14_hybms")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_cdkw2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_tyrvf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_l3qi0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_7y78n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="IntroCutscene" type="Node2D"]
script = ExtResource("1_yi7uw")

[node name="Darkness" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="SkipButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 128.0
offset_top = -16.0
offset_right = 218.0
offset_bottom = 74.0
texture_normal = ExtResource("2_l8g6v")
texture_pressed = ExtResource("3_mcn63")

[node name="Label" type="Label" parent="CanvasLayer"]
z_index = 5
offset_left = -904.0
offset_top = -448.0
offset_right = 256.0
offset_bottom = -414.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_yi7uw")
theme_override_font_sizes/font_size = 24
text = "There's a monster beside my bed..."
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-326, -216)

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Outside" type="TileMapLayer" parent="TileMap"]
z_index = -5
tile_map_data = PackedByteArray("AAD5//v/AAAAAAAAAAD5//z/AAAAAAEAAAD5//3/AAAAAAIAAAD6//v/AAABAAAAAAD6//z/AAABAAEAAAD6//3/AAABAAIAAAD7//v/AAACAAAAAAD7//z/AAACAAEAAAD7//3/AAACAAIAAAA=")
tile_set = SubResource("TileSet_xv5gm")

[node name="Background" type="TileMapLayer" parent="TileMap"]
z_index = -1
tile_map_data = PackedByteArray("AAD4//n/AAAAAAAAAAD4//r/AAAAAAEAAAD4//v/AAAAAAIAAAD4//z/AAAAAAMAAAD4//3/AAAAAAQAAAD4//7/AAAAAAUAAAD4////AAAAAAYAAAD5//n/AAABAAAAAAD5//r/AAABAAEAAAD5//v/AAABAAIAAAD5//z/AAABAAMAAAD5//3/AAABAAQAAAD5//7/AAABAAUAAAD5////AAABAAYAAAD6//r/AAACAAEAAAD6//v/AAACAAIAAAD6//z/AAACAAMAAAD6//3/AAACAAQAAAD6//7/AAACAAUAAAD6////AAACAAYAAAD7//n/AAADAAAAAAD7//r/AAADAAEAAAD7//v/AAADAAIAAAD7//z/AAADAAMAAAD7//3/AAADAAQAAAD7//7/AAADAAUAAAD7////AAADAAYAAAD8//n/AAAEAAAAAAD8//r/AAAEAAEAAAD8//v/AAAEAAIAAAD8//z/AAAEAAMAAAD8//3/AAAEAAQAAAD8//7/AAAEAAUAAAD8////AAAEAAYAAAD9//n/AAAFAAAAAAD9//r/AAAFAAEAAAD9//v/AAAFAAIAAAD9//z/AAAFAAMAAAD9//3/AAAFAAQAAAD9//7/AAAFAAUAAAD9////AAAFAAYAAAD+//n/AAAGAAAAAAD+//r/AAAGAAEAAAD+//v/AAAGAAIAAAD+//z/AAAGAAMAAAD+//3/AAAGAAQAAAD+//7/AAAGAAUAAAD+////AAAGAAYAAAD///n/AAAHAAAAAAD///r/AAAHAAEAAAD///v/AAAHAAIAAAD///z/AAAHAAMAAAD///3/AAAHAAQAAAD///7/AAAHAAUAAAD/////AAAHAAYAAAAAAPn/AAAIAAAAAAAAAPr/AAAIAAEAAAAAAPv/AAAIAAIAAAAAAPz/AAAIAAMAAAAAAP3/AAAIAAQAAAAAAP7/AAAIAAUAAAAAAP//AAAIAAYAAAABAPn/AAAJAAAAAAABAPr/AAAJAAEAAAABAPv/AAAJAAIAAAABAPz/AAAJAAMAAAABAP3/AAAJAAQAAAABAP7/AAAJAAUAAAABAP//AAAJAAYAAAACAPn/AAAKAAAAAAACAPr/AAAKAAEAAAACAPv/AAAKAAIAAAACAPz/AAAKAAMAAAACAP3/AAAKAAQAAAACAP7/AAAKAAUAAAACAP//AAAKAAYAAAADAPn/AAALAAAAAAADAPr/AAALAAEAAAADAPv/AAALAAIAAAADAPz/AAALAAMAAAADAP3/AAALAAQAAAADAP7/AAALAAUAAAADAP//AAALAAYAAAAEAPn/AAAMAAAAAAAEAPr/AAAMAAEAAAAEAPv/AAAMAAIAAAAEAPz/AAAMAAMAAAAEAP3/AAAMAAQAAAAEAP7/AAAMAAUAAAAEAP//AAAMAAYAAAAFAPn/AAANAAAAAAAFAPr/AAANAAEAAAAFAPv/AAANAAIAAAAFAPz/AAANAAMAAAAFAP3/AAANAAQAAAAFAP7/AAANAAUAAAAFAP//AAANAAYAAAAGAPn/AAAOAAAAAAAGAPr/AAAOAAEAAAAGAPv/AAAOAAIAAAAGAPz/AAAOAAMAAAAGAP3/AAAOAAQAAAAGAP7/AAAOAAUAAAAGAP//AAAOAAYAAAAHAPn/AAAPAAAAAAAHAPr/AAAPAAEAAAAHAPv/AAAPAAIAAAAHAPz/AAAPAAMAAAAHAP3/AAAPAAQAAAAHAP7/AAAPAAUAAAAHAP//AAAPAAYAAAAIAPn/AAAQAAAAAAAIAPr/AAAQAAEAAAAIAPv/AAAQAAIAAAAIAPz/AAAQAAMAAAAIAP3/AAAQAAQAAAAIAP7/AAAQAAUAAAAIAP//AAAQAAYAAAAJAPn/AAARAAAAAAAJAPr/AAARAAEAAAAJAPv/AAARAAIAAAAJAPz/AAARAAMAAAAJAP3/AAARAAQAAAAJAP7/AAARAAUAAAAJAP//AAARAAYAAAAKAPn/AAASAAAAAAAKAPr/AAASAAEAAAAKAPv/AAASAAIAAAAKAPz/AAASAAMAAAAKAP3/AAASAAQAAAAKAP7/AAASAAUAAAAKAP//AAASAAYAAAALAPn/AAATAAAAAAALAPr/AAATAAEAAAALAPv/AAATAAIAAAALAPz/AAATAAMAAAALAP3/AAATAAQAAAALAP7/AAATAAUAAAALAP//AAATAAYAAAAMAPn/AAAUAAAAAAAMAPr/AAAUAAEAAAAMAPv/AAAUAAIAAAAMAPz/AAAUAAMAAAAMAP3/AAAUAAQAAAAMAP7/AAAUAAUAAAAMAP//AAAUAAYAAAD6//n/AAACAAAAAAA=")
tile_set = SubResource("TileSet_nbnyv")

[node name="Middle" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAADy/wAAAAAAAAAAAADz/wAAAAAAAAAAAAD0/wAAAAAAAAAAAAD1/wAAAAAAAAAAAAD2/wAAAAAAAAAAAADw//r/AAAAAAAAAADw//v/AAAAAAAAAADw//z/AAAAAAAAAADw//3/AAAAAAAAAADw//7/AAAAAAAAAADw////AAAAAAAAAADx//r/AAAAAAAAAADx//v/AAAAAAAAAADx//z/AAAAAAAAAADx//3/AAAAAAAAAADx//7/AAAAAAAAAADx////AAAAAAAAAADy//r/AAAAAAAAAADy//v/AAAAAAAAAADy//z/AAAAAAAAAADy//3/AAAAAAAAAADy//7/AAAAAAAAAADy////AAAAAAAAAADz//r/AAAAAAAAAADz//v/AAAAAAAAAADz//z/AAAAAAAAAADz//3/AAAAAAAAAADz//7/AAAAAAAAAADz////AAAAAAAAAAD0//r/AAAAAAAAAAD0//v/AAAAAAAAAAD0//z/AAAAAAAAAAD0//3/AAAAAAAAAAD0//7/AAAAAAAAAAD0////AAAAAAAAAAD1//r/AAAAAAAAAAD1//v/AAAAAAAAAAD1//z/AAAAAAAAAAD1//3/AAAAAAAAAAD1//7/AAAAAAAAAAD1////AAAAAAAAAAD2//r/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAADx/wAAAAAAAAAAAADw/wAAAAAAAAAAAADv/wAAAAAAAAAAAADu/wAAAAAAAAAAAADu////AAAAAAAAAADu//7/AAAAAAAAAADu//3/AAAAAAAAAADu//z/AAAAAAAAAADu//v/AAAAAAAAAADu//r/AAAAAAAAAADv//7/AAAAAAAAAADv////AAAAAAAAAADv//3/AAAAAAAAAADv//z/AAAAAAAAAADv//v/AAAAAAAAAADv//r/AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAASAP7/AAAAAAAAAAATAP7/AAAAAAAAAAAUAP7/AAAAAAAAAAAVAP7/AAAAAAAAAAAWAP7/AAAAAAAAAAANAPr/AAAAAAAAAAANAPv/AAAAAAAAAAANAPz/AAAAAAAAAAANAP3/AAAAAAAAAAANAP7/AAAAAAAAAAAOAPr/AAAAAAAAAAAOAPv/AAAAAAAAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAP7/AAAAAAAAAAAPAPr/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAP3/AAAAAAAAAAAPAP7/AAAAAAAAAAAQAPr/AAAAAAAAAAAQAPv/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAAQAP7/AAAAAAAAAAARAPr/AAAAAAAAAAARAPv/AAAAAAAAAAARAPz/AAAAAAAAAAARAP3/AAAAAAAAAAARAP7/AAAAAAAAAAASAPr/AAAAAAAAAAASAPv/AAAAAAAAAAASAPz/AAAAAAAAAAASAP3/AAAAAAAAAAASAP//AAAAAAAAAAATAPr/AAAAAAAAAAATAPv/AAAAAAAAAAATAPz/AAAAAAAAAAATAP3/AAAAAAAAAAATAP//AAAAAAAAAAAUAPr/AAAAAAAAAAAUAPv/AAAAAAAAAAAUAPz/AAAAAAAAAAAUAP3/AAAAAAAAAAAUAP//AAAAAAAAAAAVAPr/AAAAAAAAAAAVAPv/AAAAAAAAAAAVAPz/AAAAAAAAAAAVAP3/AAAAAAAAAAAVAP//AAAAAAAAAAAWAPr/AAAAAAAAAAAWAPv/AAAAAAAAAAAWAPz/AAAAAAAAAAAWAP3/AAAAAAAAAAAWAP//AAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAAAAAAAAADu/wEAAAAAAAAAAADu/wIAAAAAAAAAAADv/wEAAAAAAAAAAADv/wIAAAAAAAAAAADw/wEAAAAAAAAAAADw/wIAAAAAAAAAAADx/wEAAAAAAAAAAADx/wIAAAAAAAAAAADy/wEAAAAAAAAAAADy/wIAAAAAAAAAAADz/wEAAAAAAAAAAADz/wIAAAAAAAAAAAD0/wEAAAAAAAAAAAD0/wIAAAAAAAAAAAD1/wEAAAAAAAAAAAD1/wIAAAAAAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD3/wEAAAAAAAAAAAD3/wIAAAAAAAAAAAD4/wEAAAAAAAAAAAD4/wIAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAD3//r/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD4/wAAAAAAAAAAAAD5/wAAAAAAAAAAAAD6/wAAAAAAAAAAAAD7/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAADu//f/AAAAAAAAAADu//j/AAAAAAAAAADu//n/AAAAAAAAAADv//f/AAAAAAAAAADv//j/AAAAAAAAAADv//n/AAAAAAAAAADw//f/AAAAAAAAAADw//j/AAAAAAAAAADw//n/AAAAAAAAAADx//f/AAAAAAAAAADx//j/AAAAAAAAAADx//n/AAAAAAAAAADy//f/AAAAAAAAAADy//j/AAAAAAAAAADy//n/AAAAAAAAAADz//f/AAAAAAAAAADz//j/AAAAAAAAAADz//n/AAAAAAAAAAD0//f/AAAAAAAAAAD0//j/AAAAAAAAAAD0//n/AAAAAAAAAAD1//f/AAAAAAAAAAD1//j/AAAAAAAAAAD1//n/AAAAAAAAAAD2//f/AAAAAAAAAAD2//j/AAAAAAAAAAD2//n/AAAAAAAAAAD3//f/AAAAAAAAAAD3//j/AAAAAAAAAAD3//n/AAAAAAAAAAD4//f/AAAAAAAAAAD4//j/AAAAAAAAAAD5//f/AAAAAAAAAAD5//j/AAAAAAAAAAD6//f/AAAAAAAAAAD6//j/AAAAAAAAAAD7//f/AAAAAAAAAAD7//j/AAAAAAAAAAD8//f/AAAAAAAAAAD8//j/AAAAAAAAAAD9//f/AAAAAAAAAAD9//j/AAAAAAAAAAD+//f/AAAAAAAAAAD+//j/AAAAAAAAAAD///f/AAAAAAAAAAD///j/AAAAAAAAAAAAAPf/AAAAAAAAAAAAAPj/AAAAAAAAAAABAPf/AAAAAAAAAAABAPj/AAAAAAAAAAACAPf/AAAAAAAAAAACAPj/AAAAAAAAAAADAPf/AAAAAAAAAAADAPj/AAAAAAAAAAAEAPf/AAAAAAAAAAAEAPj/AAAAAAAAAAAFAPf/AAAAAAAAAAAFAPj/AAAAAAAAAAAGAPf/AAAAAAAAAAAGAPj/AAAAAAAAAAAHAPf/AAAAAAAAAAAHAPj/AAAAAAAAAAAIAPf/AAAAAAAAAAAIAPj/AAAAAAAAAAAJAPf/AAAAAAAAAAAJAPj/AAAAAAAAAAAKAPf/AAAAAAAAAAAKAPj/AAAAAAAAAAALAPf/AAAAAAAAAAALAPj/AAAAAAAAAAAMAPf/AAAAAAAAAAAMAPj/AAAAAAAAAAANAPf/AAAAAAAAAAANAPj/AAAAAAAAAAANAPn/AAAAAAAAAAAOAPf/AAAAAAAAAAAOAPj/AAAAAAAAAAAOAPn/AAAAAAAAAAAPAPf/AAAAAAAAAAAPAPj/AAAAAAAAAAAPAPn/AAAAAAAAAAAQAPf/AAAAAAAAAAAQAPj/AAAAAAAAAAAQAPn/AAAAAAAAAAARAPf/AAAAAAAAAAARAPj/AAAAAAAAAAARAPn/AAAAAAAAAAASAPf/AAAAAAAAAAASAPj/AAAAAAAAAAASAPn/AAAAAAAAAAATAPf/AAAAAAAAAAATAPj/AAAAAAAAAAATAPn/AAAAAAAAAAAUAPf/AAAAAAAAAAAUAPj/AAAAAAAAAAAUAPn/AAAAAAAAAAAVAPf/AAAAAAAAAAAVAPj/AAAAAAAAAAAVAPn/AAAAAAAAAAAWAPf/AAAAAAAAAAAWAPj/AAAAAAAAAAAWAPn/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_4meus")

[node name="Foreground" type="TileMapLayer" parent="TileMap"]
z_index = 1
tile_set = SubResource("TileSet_48t7m")

[node name="Items" type="Node" parent="."]

[node name="bed" type="AnimatedSprite2D" parent="Items"]
z_index = 1
position = Vector2(-370.00003, -85)
scale = Vector2(0.9375, 0.9375)
sprite_frames = SubResource("SpriteFrames_hcyg2")
autoplay = "default"
frame_progress = 0.06747928

[node name="cabinet" type="AnimatedSprite2D" parent="Items"]
z_index = -1
position = Vector2(84, -174)
sprite_frames = SubResource("SpriteFrames_5rod7")

[node name="bedroom_door" type="AnimatedSprite2D" parent="Items"]
z_index = -1
position = Vector2(570, -150)
sprite_frames = SubResource("SpriteFrames_pckea")
frame = 1
frame_progress = 0.327482

[node name="toybox" type="AnimatedSprite2D" parent="Items"]
z_index = -1
position = Vector2(747, -75)
sprite_frames = SubResource("SpriteFrames_sy5bn")

[node name="pic_01" type="AnimatedSprite2D" parent="Items"]
z_index = -5
position = Vector2(270, -201)
sprite_frames = SubResource("SpriteFrames_cdkw2")

[node name="pic_02" type="AnimatedSprite2D" parent="Items"]
z_index = -5
position = Vector2(361, -225)
sprite_frames = SubResource("SpriteFrames_l3qi0")

[node name="light_01" type="PointLight2D" parent="Items"]
position = Vector2(-335, -144)
scale = Vector2(0.948, 0.45)
color = Color(1, 1, 1, 0.470588)
texture = ExtResource("17_0xgk8")

[node name="light_02" type="PointLight2D" parent="Items"]
position = Vector2(84, -167)
scale = Vector2(0.9, 0.9)
color = Color(1, 1, 1, 0.470588)
energy = 0.0
texture = ExtResource("18_vm38n")

[node name="clouds" type="Sprite2D" parent="Items"]
z_index = -2
position = Vector2(-150, -235)
scale = Vector2(0.5, 0.5)
texture = ExtResource("18_0xs05")

[node name="elesi" type="Sprite2D" parent="Items"]
z_index = -2
position = Vector2(-164, -156)
scale = Vector2(0.6, 0.6)
texture = ExtResource("19_27cpo")

[node name="void" type="Sprite2D" parent="Items"]
z_index = -2
position = Vector2(30, -93)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_mcn63")

[node name="Sounds" type="Node" parent="."]

[node name="NightAmbiance" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(-326, -241)
stream = ExtResource("20_cr8av")
pitch_scale = 0.9
autoplay = true
max_distance = 800.0

[node name="Fan" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(-165, -155)
stream = ExtResource("21_6802q")
pitch_scale = 0.85
autoplay = true
max_distance = 650.0

[node name="CabinetShake" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(84, -167)
stream = ExtResource("22_lm22b")
pitch_scale = 0.6
max_distance = 750.0

[connection signal="pressed" from="CanvasLayer/SkipButton" to="." method="_on_skip_button_pressed"]
